--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto" role="tablist">
-                <li class="nav-item"><a class="nav-link tabFade" role="tab" href="#About">Mission</a></li>
-                <li class="nav-item"><a class="nav-link tabFade" role="tab" href="#Translate">Translator</a></li>
-                <li class="nav-item"><a class="nav-link tabFade" role="tab" href="#People">People</a></li>
-                <li class="nav-item"><a class="nav-link tabFade" role="tab" href="#Publications">Publications</a></li>
-                <li class="nav-item"><a class="nav-link tabFade" role="tab" href="#Funding">Funding</a></li>
-                <li class="nav-item"><a class="nav-link tabFade" role="tab" href="#Tutorial">SiGML</a></li>
-                <li class="nav-item"><a class="nav-link tabFade" role="tab" href="#Resources">Resources</a></li>
-                <li class="nav-item"><a class="nav-link tabFade" role="tab" href="#Projects">Projects</a></li>
+                <li class="nav-item"><a class="nav-link active" role="tab" href="#About" onclick="openTab(href);">Mission</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(href);">Translator</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#People">People</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Publications">Publications</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Funding">Funding</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Tutorial">SiGML</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Resources">Resources</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Projects">Projects</a></li>
             </ul>
         </div>
     </div>
@@ -128,7 +128,7 @@
 
 <!-- Translate -->
 
-<section class="projects-section bg-white fadeIn" id="Translate" role="tabpanel">
+<section class="projects-section bg-white fadeIn undisplayed" id="Translate" role="tabpanel">
     <div class="container" height="100%">
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -178,7 +178,7 @@
               <label for="suggestions" style="display: inline-block;">Suggestions box: </label>
               <br>
               <textarea id="suggestions" class="inputBox" placeholder="Enter your suggestion here. If you have more than one word to suggest, separate them with ';'"></textarea>
-              <!-- <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" /> -->
+              <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" />
         </span>
 
         <!-- FR: I've made the following progress fields invisible, if you comment them out completely the avatar doesn't work anymore -->
@@ -216,7 +216,7 @@
 <!--================================================================-->
 
 <!-- Project info section -->
-<section class="projects-section bg-light fadeIn" id="People" role="tabpanel">
+<section class="projects-section bg-light fadeIn undisplayed" id="People" role="tabpanel">
 
     <div class="container" height="100%">
 
@@ -297,7 +297,7 @@
 <!--================================================================-->
 
 <!-- Publications section -->
-<section class="projects-section bg-white fadeIn" id="Publications" role="tabpanel">
+<section class="projects-section bg-white fadeIn undisplayed" id="Publications" role="tabpanel">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -314,7 +314,7 @@
 <!--================================================================-->
 
 <!-- Funding section -->
-<section class="projects-section bg-white fadeIn" id="Funding" role="tabpanel">
+<section class="projects-section bg-white fadeIn undisplayed" id="Funding" role="tabpanel">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -333,7 +333,7 @@
 
 
 <!-- Tutorial section -->
-<section class="projects-section bg-white fadeIn" id="Tutorial" role="tabpanel">
+<section class="projects-section bg-white fadeIn undisplayed" id="Tutorial" role="tabpanel">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -376,8 +376,8 @@
             </span>
 
            <!--  <span id="avatarTut" class="CWASAAvatar av1"></span> -->
-            <div class="CWASAAvatar" align="center" ></div>
-          </div>
+            <!-- <div class="CWASAAvatar" align="center" ></div>
+ -->          </div>
       </div>
 
 </section>
@@ -385,7 +385,7 @@
 <!--================================================================-->
 
 <!-- Resources section -->
-<section class="projects-section bg-white fadeIn" id="Resources" role="tabpanel">
+<section class="projects-section bg-white fadeIn undisplayed" id="Resources" role="tabpanel">
 
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
@@ -410,7 +410,7 @@
 <!--================================================================-->
 
 <!-- Projects -->
-<section class="projects-section bg-light fadeIn" id="Projects" role="tabpanel">
+<section class="projects-section bg-light fadeIn undisplayed" id="Projects" role="tabpanel">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
