--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto" role="tablist">
-                <li class="nav-item"><a class="nav-link active" role="tab" href="#About" onclick="openTab(event, About);">Mission</a></li>
-                <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(event,Translate);">Translator</a></li>
+                <li class="nav-item"><a class="nav-link active" role="tab" href="#About" onclick="openTab(event, 'About');">Mission</a></li>
+                <li class="nav-item"><a class="nav-link" role="tab" href="#Translate" onclick="openTab(event, 'Translate');">Translator</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#People">People</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Publications">Publications</a></li>
                 <li class="nav-item"><a class="nav-link" role="tab" href="#Funding">Funding</a></li>
