--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               <br>
             </span>
 
-           <!--  <span id="avatarTut" class="CWASAAvatar av1"></span> -->
+            <span id="avatarTut" class="CWASAAvatar av1"></span>
             <!-- <div class="CWASAAvatar" align="center" ></div>
  -->          </div>
       </div>
