--- a/index.html
+++ b/index.html
@@ -376,8 +376,8 @@
             </span>
 
             <span id="avatarTut" class="CWASAAvatar av1"></span>
-            <!-- <div class="CWASAAvatar" align="center" ></div>
- -->          </div>
+            <!-- <div class="CWASAAvatar" align="center" ></div>-->          
+          </div>
       </div>
 
 </section>
