--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               <br>
             </span>
 
-            <span id="avatarTut" class="CWASAAvMenu av0" align="center"></span>
+            <span id="avatarTut" class="divCtrlPanel av0" align="center"></span>
             <!-- <div class="CWASAAvatar" align="center" ></div>-->          
           </div>
       </div>
