--- a/grammar.html
+++ b/grammar.html
@@ -77,7 +77,7 @@
                     <p class="text-black mb-3">
                       Comparative studies on languages of different language families have revealed striking differences as well as interesting (possibly universal) similarities concerning their grammatical structure. Traditionally, however, these studies were only concerned with the comparison of grammatical phenomena across spoken languages. Once we include sign languages in the typological picture, new research questions emerge.
                     </p>
-                    <p class="text-black mb-3">
+                    <p class="text-black mb-5">
                       First of all, we need to ask whether grammatical models that have been developed on the basis of spoken language data can also be applied to sign languages. The general picture that emerges is that many of these models are in fact applicable to visual-gestural languages. While studies that test the cross-modal applicability of theoretical models often focus on a single sign language, it is also important to include, in a second step, typological comparisons in the investigation. On the one hand, we want to know whether typological classifications and generalizations that have been established on the basis of spoken language samples also hold for sign languages despite the different language modality. In case we find modality-specific patterns, we need to investigate whether these can be accounted for in a theoretical model. On the other hand, we also want to know in how far sign languages differ from each other. And even more importantly: do they differ along the same lines as spoken languages do?
                     </p>
 
@@ -96,7 +96,7 @@
 
                     <h5 class="mt-3">Reduplication</h5>
                     <p class="text-black mb-3">
-                      Reduplication is a morphological process whereby a word or part of a word is repeated to mark a change in meaning. Across spoken languages, reduplication is commonly used to realize plurals or certain aspectual meaning (e.g., habituality) – and the same has been found to hold in many unrelated sign languages. Reduplication is interesting, as it is often iconic in both spoken and signed languages, in that the repetition signals a multitude of objects (plural) or a multitude of events (aspect). We are interested in the similarities and differences of various reduplication processed across the two modalities. (see also “Projects”)
+                      Reduplication is a morphological process whereby a word or part of a word is repeated to mark a change in meaning. Across spoken languages, reduplication is commonly used to realize plurals or certain aspectual meaning (e.g., habituality) – and the same has been found to hold in many unrelated sign languages. Reduplication is interesting, as it is often iconic in both spoken and signed languages, in that the repetition signals a multitude of objects (plural) or a multitude of events (aspect). We are interested in the similarities and differences of various reduplication processes across the two modalities.
                     </p>
 
                     <!-- <h5 class="mt-3">Negation</h5>
@@ -125,7 +125,7 @@
                 <p class="mb-5">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/yFLb2I7t-JQ?rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </p>
-                
+
                 <p class="mb-5">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/9lXGwsv1WuE?start=100&amp;rel=0&amp;showinfo=0&amp;loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </p>
